--- a/views/auth/register.jade
+++ b/views/auth/register.jade
@@ -2,9 +2,53 @@ extends ../layout
 
 body
 	block body
-		form(role="form", action="/auth/local/register", method="post")
-			input(type="text", name="username", placeholder="Username")
-			input(type="text", name="email", placeholder="Email")
-			input(type="password", name="password", placeholder="Password")
-			button(type="submit", class="btn btn-primary").
-				Sign Up
+		nav.navbar.navbar-inverse
+			.container-fluid
+				.navbar-header
+					a(class="navbar-brand", href="/").
+						Address Book
+		.container
+			if errors
+				for error in errors
+					label=__(error)
+			.col-md-6.col-md-offset-3
+				form(role="form", action="/auth/local/register", method="post")#register-form
+					.form-group
+						label Username
+						input(type="text", name="username", placeholder="Username").form-control
+					.form-group
+						label Email
+						input(type="text", name="email", placeholder="Email").form-control
+					.form-group
+						label Password
+						input(type="password", name="password", placeholder="Password").form-control
+					.form-group
+						button(type="submit", class="btn btn-primary center-block").
+							Sign Up
+		script(src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js")
+		script.
+			//form validation rules
+			$("#register-form").validate({
+				rules: {
+					username: "required",
+					email: {
+						required: true,
+						email: true
+					},
+					password: {
+						required: true,
+						minlength: 6
+					}
+				},
+				messages: {
+					username: "Please enter your firstname",
+					email: "Please enter a valid email address",
+					password: {
+						required: "Please provide a password",
+						minlength: "Your password must be at least 6 characters long"
+					}
+				},
+				submitHandler: function(form) {
+				form.submit();
+				}
+			});
