creating and listing addresses

--- a/views/404.jade
+++ b/views/404.jade
@@ -7,6 +7,7 @@ body
           .navbar-header
             a(class="navbar-brand", href="/").
               Address Book
-      .jumbotron
-        h1 404 Error
-        p We can't find the page you were looking for
+      .container
+        .jumbotron.text-center
+          h1 404 Error
+          p We can't find the page you were looking for
