--- a/views/500.jade
+++ b/views/500.jade
@@ -7,6 +7,7 @@ body
           .navbar-header
             a(class="navbar-brand", href="/").
               Address Book
-      .jumbotron
-        h1 500 Error
-        p Something went wrong
+      .container
+        .jumbotron.text-center
+          h1 500 Error
+          p Something went wrong
