--- a/views/auth/login.jade
+++ b/views/auth/login.jade
@@ -9,6 +9,7 @@ body
             Address Book
     .container
       .col-md-6.col-md-offset-3
+        h2 Login
         form(role="form", action="/auth/local", method="post")
           .form-group
             label Username
