--- a/views/auth/register.jade
+++ b/views/auth/register.jade
@@ -8,10 +8,11 @@ body
 					a(class="navbar-brand", href="/").
 						Address Book
 		.container
-			if errors
-				for error in errors
-					label=__(error)
 			.col-md-6.col-md-offset-3
+				h2 Register
+				if errors
+					for error in errors
+						label.error.center-block=__(error)
 				form(role="form", action="/auth/local/register", method="post")#register-form
 					.form-group
 						label Username
