--- a/views/403.jade
+++ b/views/403.jade
@@ -7,6 +7,7 @@ body
           .navbar-header
             a(class="navbar-brand", href="/").
               Address Book
-      .jumbotron
-        h1 403 Error
-        p Permission denied for this page
+      .container
+        .jumbotron.text-center
+          h1 403 Error
+          p Permission denied for this page
