included test coverage

--- a/views/address/index.jade
+++ b/views/address/index.jade
@@ -12,7 +12,7 @@ body
 						logout
 
 		.container
-			.col-md-8.col-md-offset-2
+			.col-md-8.col-md-offset-2.text-center
 				h2.text-center Your Contacts
 				if addresses.length > 0
 					table.table.bordered-table.table-striped
@@ -31,13 +31,13 @@ body
 									th= address.address
 									th= address.city
 									th
-										a(href="/",style="padding:5px;")
+										a(href="/address/change?id="+address.id,style="padding:5px;")
 											i.fa.fa-edit.fa-lg
-										a(href="/",style="padding:5px;")
+										a(href="/address/remove?id="+address.id,style="padding:5px;")
 											i.fa.fa-trash-o.fa-lg
 				else
 					p.text-center You don't have any contacts yet!
-				a(href="/address/new").btn.btn-success.pull-right Add Contact
+				a(href="/address/new").btn.btn-success Add Contact
 
 
 		
