--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,5 +22,7 @@ html
     // The linker searches for this tag and adds js.  If there's no linker, we point to sails.io.js
     // SCRIPTS
     script(src="/js/dependencies/sails.io.js")
+    script(src="/js/dependencies/jquery-1.11.3.min.js")
+    script(src="/js/bootstrap.min.js")
     // SCRIPTS END
 
